# spring-boot-kubernetes

./: Dockerfile  HELP.md  README.md  build.gradle.kts  demo-deployment.yaml  renovate.json  update.sh
.github/workflows/: ci.yml
producer/: Cargo.toml
producer/src/: lib.rs
src/main/kotlin/com/example/demo/: DemoApplication.kt  KafkaAdminClient.kt  KafkaProducer.kt
src/main/kotlin/org/apache/kafka/clients/producer/: DefaultRustKafkaProducer.kt  RustKafkaProducer.kt
src/main/resources/: application.yml  logback.xml
src/test/kotlin/com/example/demo/: DemoApplicationTests.kt
