[package]
name = "producer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
log = "0.4.17"
rdkafka = { version = "0.30.0", features = ["cmake-build"] }
robusta_jni = "0.2.1"
simple_logger = "4.1.0"
