[package]
name = "producer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
log = "0.4.19"
rdkafka = { version = "0.33.2", features = ["cmake-build"] }
robusta_jni = "0.2.1"
simple_logger = { version = "4.2.0", features = ["threads"] }
